--- a/package.json
+++ b/package.json
@@ -20,19 +20,27 @@
     "babel-loader": ">=8.0.5",
     "babel-watch": ">=7.0.0",
     "cross-env": ">=5.2.0",
+    "css-loader": ">=2.1.0",
+    "express": ">=4.16.4",
     "extract-text-webpack-plugin": ">=4.0.0-beta.0",
     "html-loader": ">=0.5.5",
     "html-webpack-harddisk-plugin": ">=1.0.1",
     "html-webpack-plugin": ">=3.2.0",
+    "node-sass": "^4.14.1",
+    "postcss-load-config": ">=2.0.0",
+    "postcss-loader": ">=3.0.0",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
     "react-hot-loader": ">=4.6.5",
     "rimraf": ">=2.6.3",
+    "style-loader": "^1.2.1",
     "webpack": "^4.29.4",
     "webpack-cli": ">=3.2.3",
     "webpack-dev-middleware": ">=3.5.2",
     "webpack-hot-middleware": ">=2.24.3",
-    "webpack-merge": ">=4.2.1",
-    "express": ">=4.16.4",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2"
+    "webpack-merge": ">=4.2.1"
+  },
+  "devDependencies": {
+    "sass-loader": "^8.0.2"
   }
 }
