--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html-loader": ">=0.5.5",
     "html-webpack-harddisk-plugin": ">=1.0.1",
     "html-webpack-plugin": ">=3.2.0",
+    "moment": "^2.26.0",
     "node-sass": "^4.14.1",
     "postcss-load-config": ">=2.0.0",
     "postcss-loader": ">=3.0.0",
